--- a/html/happyfigs.html
+++ b/html/happyfigs.html
@@ -93,17 +93,19 @@
     }
     .angular .line {
 	fill:darkorange;
-	stroke:red
+	stroke:red;
+    }
+    .stairs {
+	stroke:darkorange;
+	stroke-width:5;
     }
 </style>
   </head>
     <body>
-    <svg id='fig1' width='500' height='300'></svg>
-    <svg id='fig2' width='500' height='500'></svg>
+    <svg id='fig1' width='400' height='300'></svg>
     <script>
     
 var fig1 = d3.select("#fig1")
-var fig2 = d3.select("#fig2")
 
 function PoissonSamples()
 {
@@ -792,14 +794,26 @@ function leela()
     return step
 }
 
-const cells = range(0,71)
+const cells = range(0,72)
 
 function showMatrix()
 {
     p1 = new Graphics(fig1)
-    	.matrixPlot(mpow(leelaMatrix,5))
+    	.matrixPlot(leelaId)
+	.yAxisType('inverted')
     	.axes({xLabel:"",yLabel:"",xTicks:10})
 }
+
+function game(n)
+{
+    return nestWhileList(leela(),1,s=>s!=68,n||200)
+}
+
+function infiniteGame(n)
+{
+    return nestList(leela(),1,n)
+}
+
 
 //showMatrix()
 //var ps = vmul(mpow(leelaMatrix,1000),[1].repeat(72))
@@ -807,12 +821,12 @@ function showMatrix()
 function leela1()
 {
     var step = leela()
-    hs.add(nestWhileList(step,1,s=>s!=68,200).length)
+    hs.add(game(400).length)
     p1.cleanPaper().histogram(hs,{'type':'PDF'})
 }
 /*
 var f = Exponential(1/54)
-var hs = new Histogram(10)
+var hs = new Histogram(1)
 var p1 = new Graphics(fig1)
     .xRange([0,250])
     .yRange([0,0.025])
@@ -843,60 +857,6 @@ var s=1
 window.setInterval(leela2,1)
 */
 
-function game(n)
-{
-    return nestWhileList(leela(),1,s=>s!=68,n||200)
-}
-
-function collectCycles(n)
-{
-    return cycles => {
-	recurrence(game(n),id)
-	    .mapappend(id)
-	    .splitOn(0)
-	    .filter(x => x.length>=4)
-	    .map(x=>x.toString())
-	    .forEach(c => addTo(cycles, c))
-	return cycles
-    }
-}
-
-function addTo(c,x)
-{
-    if (c[x])
-	c[x]++
-    else
-	c[x]=1
-}
-function leela4(n,m)
-{
-    var res = [], cs = nest(collectCycles(n),{},m)
-    for(var b in cs)
-	if (cs[b]>10)
-	    res.push([cs[b],b])
-    len = s => s.split(",").length
-    cycles = {
-	'raw':res,
-	'total':res.map(fst).sum(),
-	'frequent':res.sorted((x,y)=>Number(y[0]) - Number(x[0])).take(5),
-	'longest':res.sorted((x,y)=>len(y[1]) - len(x[1])).take(5)
-    }
-    var N = cycles.total
-    var p1 = new Graphics(fig1,{'class':'cycles'})
-	.xRange([0,0.1])
-	.yRange([0,10])
-	.axes({xLabel:"вероятность цикла в партии",
-	       xTicks : 5,
-	       xTickFormat : fmt.percent,
-	       yAxis : false})
-    cycles.frequent
-	.forEach(([f,c],i) =>
-		 p1.rectangle(0,9-i+0.1,f/m/2,0.8,{'class':'bar'})
-		 .label(c.replace(/,/g,'→'),{'at':[f/m/2+0.01,9-i+0.4]}))
-
-}
-
-leela4(300,10000)
 
 function cell(x){
     r = ceil(x/9)
@@ -946,12 +906,13 @@ function prob(ch)
 }
 
 function findChains(chs) {
-    return chs
-	.filter(ch => ch.head() != 67)
-	.flatMap(ch => cells.map(j => ch.concat([j])))
-	.filter(ch => ch.last() != 67)
-	.sorted((x,y) => prob(y)-prob(x))
-	.take(30)
+    return best(20,chs
+		.filter(ch => ch.last() != 67)
+		.mapappend(ch => cells.skip(68).map(j => ch.concat([j]))))
+}
+
+function best(n,chs) {
+    return chs.sorted((x,y) => prob(y)-prob(x)).take(n)
 }
 
 function recurrence(lst,out)
@@ -985,6 +946,91 @@ function times()
 	.axes({})
 }
 //times()
+
+var chains = [4,5,6].mapappend(
+    n=>cells.mapappend(
+	x=>nest(findChains,[[x]].transpose(),n-1).map(
+	    c => [c,prob(c)])))
+    .filter(p => p[1]>0.0001)
+    .sorted((x,y)=>y[1]-x[1])
+
+function collectChains()
+{
+    s = leela()(s)
+    chain.shift()
+    chain.push(s-1)
+    i = chains.findIndex(ch => ch[0].equal(chain))
+    h.add(i<0 ? 100:i)
+    p1.cleanPaper()
+	.histogram(h,{'type':'PDF'})
+	.listPlot(ref,{'joined':true,'points':false})
+}
+/*
+var s = 1
+var chain = [0].repeat(4)
+var h = new Histogram()
+var ref = chains.mapappend((c,i)=>[[i,c[1]],[i+1,c[1]]])
+var f = Exponential(1/54)
+var hs = new Histogram(1)
+var p1 = new Graphics(fig1)
+    .xRange([0,15])
+    .yRange([0,0.01])
+    .axes({xLabel:"последовательность",
+	   yLabel:"распределение вероятности",
+//	   yTickFormat:fmt.percent,
+	   yTicks:3})
+
+window.setInterval(collectChains,1)
+*/
+
+function leela4()
+{
+    var p1 = new Graphics(fig1,{'class':'cycles'})
+	.xRange([0,0.3])
+	.yRange([0,10])
+	.axes({xLabel:"вероятность цикла в партии",
+	       xTicks : 5,
+	       xTickFormat : fmt.percent,
+	       yAxis : false})
+    chains.take(10)
+	.forEach(([c,f],i) =>
+		 p1.rectangle(0,9-i+0.1,f*41,0.8,
+			      {'class':'bar'})
+		 .label(c.map(x=>x+1).toString().replace(/,/g,'→'),
+			{'at':[f*41+0.05,9-i+0.4]}))
+}
+
+//leela4()
+
+function leela41()
+{
+    h = new Histogram(0.01)
+	.fromList(chains.map(x=>x[1]*40))
+    var p1 = new Graphics(fig1,{'class':'cycles'})
+	.xRange([0,0.3])
+	.yRange([0.99,1000])
+	.yAxisType('log')
+	.histogram(h,{'kind':'stairs'})
+	.histogram(h,{'kind':'bars'})
+	.axes({xLabel:"вероятность цепочки в партии",
+	       yLabel:"количество цепочек",
+	       xTicks : 5,
+	       xTickFormat : fmt.percent,
+	       yTicks:false})
+    var tks=[0,1,2,3]
+    function pow10(n)
+    {
+	if (n ==0) return "1"
+	if (n ==1) return "10"
+	return "10"+sup(n)
+    }
+    tks.forEach(n => p1.label(pow10(n),{'at':[-0.03,9.5**n],'class':'axis'})
+		.line([[-0.005,10**n],[0,10**n]]))
+}
+
+leela41()
+
+
 </script>
   </body>
 </html>
