--- a/html/happyfigs.html
+++ b/html/happyfigs.html
@@ -86,6 +86,7 @@
     }
     .cycles .label {
 	font-family:times;
+	font-size:90%;
     }
     .polarMesh {
 	stroke: gray;
@@ -102,7 +103,7 @@
 </style>
   </head>
     <body>
-    <svg id='fig1' width='400' height='300'></svg>
+    <svg id='fig1' width='400' height='400'></svg>
     <script>
     
 var fig1 = d3.select("#fig1")
@@ -780,6 +781,7 @@ function leela()
 	72:51,
 	68:1
     }
+
     var m
     function move() {return randomInteger(6)()+1}
     function step(s)
@@ -799,7 +801,7 @@ const cells = range(0,72)
 function showMatrix()
 {
     p1 = new Graphics(fig1)
-    	.matrixPlot(leelaId)
+    	.matrixPlot(mmul(leelaId,leelaMatrix))
 	.yAxisType('inverted')
     	.axes({xLabel:"",yLabel:"",xTicks:10})
 }
@@ -814,8 +816,7 @@ function infiniteGame(n)
     return nestList(leela(),1,n)
 }
 
-
-//showMatrix()
+showMatrix()
 //var ps = vmul(mpow(leelaMatrix,1000),[1].repeat(72))
 // распределение длительности игры
 function leela1()
@@ -984,9 +985,9 @@ window.setInterval(collectChains,1)
 function leela4()
 {
     var p1 = new Graphics(fig1,{'class':'cycles'})
-	.xRange([0,0.3])
+	.xRange([0,0.5])
 	.yRange([0,10])
-	.axes({xLabel:"вероятность цикла в партии",
+	.axes({xLabel:"вероятность встретить цепочку в партии",
 	       xTicks : 5,
 	       xTickFormat : fmt.percent,
 	       yAxis : false})
@@ -995,7 +996,7 @@ function leela4()
 		 p1.rectangle(0,9-i+0.1,f*41,0.8,
 			      {'class':'bar'})
 		 .label(c.map(x=>x+1).toString().replace(/,/g,'→'),
-			{'at':[f*41+0.05,9-i+0.4]}))
+			{'at':[f*41+0.025,9-i+0.4]}))
 }
 
 //leela4()
@@ -1027,7 +1028,7 @@ function leela41()
 		.line([[-0.005,10**n],[0,10**n]]))
 }
 
-leela41()
+//leela41()
 
 
 </script>
