--- a/html/happyfigs.html
+++ b/html/happyfigs.html
@@ -781,7 +781,6 @@ function leela()
 	72:51,
 	68:1
     }
-
     var m
     function move() {return randomInteger(6)()+1}
     function step(s)
@@ -816,21 +815,33 @@ function infiniteGame(n)
     return nestList(leela(),1,n)
 }
 
-showMatrix()
+//showMatrix()
 //var ps = vmul(mpow(leelaMatrix,1000),[1].repeat(72))
 // распределение длительности игры
 function leela1()
 {
     var step = leela()
     hs.add(game(400).length)
-    p1.cleanPaper().histogram(hs,{'type':'PDF'})
+    p1.cleanPaper()//.histogram(hs,{'type':'PDF'})
+	.listPlot(ts,{'joined':true,'points':false})
+}
+
+
+function timing()
+{
+    var m = Id(72)
+    return nestList(() => {m = mmul(leelaMatrix,m); return m[0][67]},0,250)
+    new Graphics(fig1)
+	.listPlot(ts,{'joined':true,'points':false})
 }
 /*
+ts = timing()
+
 var f = Exponential(1/54)
-var hs = new Histogram(1)
+var hs = new Histogram(6)
 var p1 = new Graphics(fig1)
     .xRange([0,250])
-    .yRange([0,0.025])
+    .yRange([0,0.03])
     .axes({xLabel:"длительнось партии в шагах",
 	   yLabel:"распределение вероятности",
 	   yTickFormat:fmt.percent,
@@ -844,7 +855,7 @@ function leela2()
     hs.add(s=step(s))
     p1.cleanPaper().histogram(hs,{'type':'PDF'})
 }
-/*
+
 var hs = new Histogram(1)
 p1 = new Graphics(fig1)
     .xRange([1,73])
@@ -856,7 +867,7 @@ p1 = new Graphics(fig1)
 var step = leela()
 var s=1
 window.setInterval(leela2,1)
-*/
+
 
 
 function cell(x){
@@ -945,14 +956,14 @@ function times()
 	.axes({})
 }
 //times()
-
+/*
 var chains = [4,5,6].mapappend(
     n=>cells.mapappend(
 	x=>nest(findChains,[[x]].transpose(),n-1).map(
 	    c => [c,prob(c)])))
     .filter(p => p[1]>0.0001)
     .sorted((x,y)=>y[1]-x[1])
-
+*/
 function collectChains()
 {
     s = leela()(s)
@@ -1015,8 +1026,6 @@ function leela41()
 	       xTicks : 5,
 	       xTickFormat : fmt.percent,
 	       yTicks:false})
-    for(var b in h.data)
-	p1.label
     var tks=[0,1,2,3,4]
     function pow10(n)
     {
@@ -1029,6 +1038,7 @@ function leela41()
 }
 
 //leela41()
+
 
 
 </script>
