--- a/html/queue.html
+++ b/html/queue.html
@@ -353,9 +353,11 @@ function queueTimes3(l,m,s)
 }
 //queueTimes3(10,12,1)
 
+var dd =[[0.5,0.176048],[0.594604,0.159214],[0.707107,0.143746],[0.840896,0.129545],[1.,0.11652],[1.18921,0.104582],[1.41421,0.0936527],[1.68179,0.0836543],[2.,0.0745172],[2.37841,0.0661763],[2.82843,0.0585716],[3.36359,0.0516478],[4.,0.0453542],[4.75683,0.0396441],[5.65685,0.0344749],[6.72717,0.0298075],[8.,0.0256059],[9.51366,0.0218373],[11.3137,0.0184715],[13.4543,0.0154807],[16.,0.012839],[19.0273,0.0105223]]
+
 function Little()
 {
-    dd =[[0.5,0.176048],[0.594604,0.159214],[0.707107,0.143746],[0.840896,0.129545],[1.,0.11652],[1.18921,0.104582],[1.41421,0.0936527],[1.68179,0.0836543],[2.,0.0745172],[2.37841,0.0661763],[2.82843,0.0585716],[3.36359,0.0516478],[4.,0.0453542],[4.75683,0.0396441],[5.65685,0.0344749],[6.72717,0.0298075],[8.,0.0256059],[9.51366,0.0218373],[11.3137,0.0184715],[13.4543,0.0154807],[16.,0.012839],[19.0273,0.0105223]]
+   
     cdf = t => 1-integrate(Busy(15,16),[0,t],{'maxDivisions':20})
     var p = new Graphics(fig1)
 	.xRange([0.5,19])
@@ -379,6 +381,29 @@ function C(c,r) {
 }
 var r = 15/16
 
+pts = [[5,0],[6,2],[8,0]]
+new Graphics(fig1)
+    .xRange([0,20])
+    .yRange([0,6])
+    .plot(x=>listIntegralInterpolation(pts)(x))
+//    .plot(listIntegralInterpolationInv(pts))
+    .listLinePlot(pts.map(fst).zip(pts.map(snd).accumsum().tail()))
+    .listPlot(pts)
+    .axes({})
+
+
+function exch(n,m) {
+    return nestWhileList(go,[[n,0],'d'],([[x,y],_1,_2])=>x+y != 8,15)
+    function go ([[x,y],w]) {
+	if (w == 's') return [[x,y],'s','Stop']
+	if (w == 'l') return [[n,y],'r','0->A']
+	if (w == 'r') return [[n-(m-y),m],'u','A->B']
+	if (w == 'u') return [[x,0],'d','B->0']
+	if (x < m) return [[0,x],'l','A->B']
+	if (x == m) return [[0,m],'s','End']
+	return [[x-m,m],'u','A->B']
+    }
+}
 
     </script>
   </body>
